@@ -40,6 +40,14 @@ int voikko_set_bool_option(int handle, int option, int value) {
 			if (value) voikko_options.ignore_uppercase = 1;
 			else voikko_options.ignore_uppercase = 0;
 			return 1;
+		case VOIKKO_OPT_ACCEPT_FIRST_UPPERCASE:
+			if (value) voikko_options.accept_first_uppercase = 1;
+			else voikko_options.accept_first_uppercase = 0;
+			return 1;
+		case VOIKKO_OPT_ACCEPT_ALL_UPPERCASE:
+			if (value) voikko_options.accept_all_uppercase = 1;
+			else voikko_options.accept_all_uppercase = 0;
+			return 1;
 		case VOIKKO_OPT_NO_UGLY_HYPHENATION:
 			if (value) voikko_options.no_ugly_hyphenation = 1;
 			else voikko_options.no_ugly_hyphenation = 0;
@@ -61,6 +69,19 @@ int voikko_set_string_option(int handle, int option, const char * value) {
 	switch (option) {
 		case VOIKKO_OPT_ENCODING:
 			if (!value) return 0;
+			iconv_t toext = iconv_open(value, "WCHAR_T");
+			if (toext == (iconv_t) -1) {
+				return 0;
+			}
+			iconv_t fromext = iconv_open("WCHAR_T", value);
+			if (fromext == (iconv_t) -1) {
+				iconv_close(toext);
+				return 0;
+			}
+			iconv_close(voikko_options.iconv_ucs4_ext);
+			voikko_options.iconv_ucs4_ext = toext;
+			iconv_close(voikko_options.iconv_ext_ucs4);
+			voikko_options.iconv_ext_ucs4 = fromext;
 			voikko_options.encoding = value;
 			return 1;
 	}
@@ -72,6 +93,8 @@ const char * voikko_init(int * handle, const char * langcode) {
 	voikko_options.ignore_dot = 0;
 	voikko_options.ignore_numbers = 0;
 	voikko_options.ignore_uppercase = 0;
+	voikko_options.accept_first_uppercase = 1;
+	voikko_options.accept_all_uppercase = 1;
 	voikko_options.no_ugly_hyphenation = 0;
 	voikko_options.intersect_compound_level = 1;
 	voikko_options.encoding = "UTF-8";
@@ -83,11 +106,49 @@ const char * voikko_init(int * handle, const char * langcode) {
 		free(project);
 		return "Unsupported language";
 	}
+	/* Initialise converters */
+	voikko_options.iconv_ucs4_utf8 = iconv_open("UTF-8", "WCHAR_T");
+	if (voikko_options.iconv_ucs4_utf8 == (iconv_t) -1) {
+		free(project);
+		return "iconv_open(\"UTF-8\", \"WCHAR_T\") failed";
+	}
+	voikko_options.iconv_utf8_ucs4 = iconv_open("WCHAR_T", "UTF-8");
+	if (voikko_options.iconv_utf8_ucs4 == (iconv_t) -1) {
+		iconv_close(voikko_options.iconv_ucs4_utf8);
+		free(project);
+		return "iconv_open(\"WCHAR_T\", \"UTF-8\") failed";
+	}
+	voikko_options.iconv_ucs4_ext = iconv_open(voikko_options.encoding, "WCHAR_T");
+	if (voikko_options.iconv_ucs4_ext == (iconv_t) -1) {
+		iconv_close(voikko_options.iconv_utf8_ucs4);
+		iconv_close(voikko_options.iconv_ucs4_utf8);
+		free(project);
+		return "iconv_open(voikko_options.encoding, \"WCHAR_T\") failed";
+	}
+	voikko_options.iconv_ext_ucs4 = iconv_open("WCHAR_T", voikko_options.encoding);
+	if (voikko_options.iconv_ext_ucs4 == (iconv_t) -1) {
+		iconv_close(voikko_options.iconv_ucs4_ext);
+		iconv_close(voikko_options.iconv_utf8_ucs4);
+		iconv_close(voikko_options.iconv_ucs4_utf8);
+		free(project);
+		return "iconv_open(\"WCHAR_T\", voikko_options.encoding) failed";
+	}
+	
 	init_libmalaga(project);
 	free(project);
 	if (malaga_error) {
 		voikko_handle_count--;
 		return malaga_error;
+	}
+	voikko_options.cache = malloc(1*6544 * sizeof(wchar_t));
+	if (voikko_options.cache) {
+		voikko_options.cache_meta = malloc(1*1008);
+		if (voikko_options.cache_meta) memset(voikko_options.cache_meta, 0, 1*1008);
+		else {
+			free(voikko_options.cache);
+			voikko_options.cache = 0;
+		}
+		memset(voikko_options.cache, 0, 1*6544 * sizeof(wchar_t));
 	}
 	*handle = voikko_handle_count;
 	return 0;
@@ -96,7 +157,18 @@ const char * voikko_init(int * handle, const char * langcode) {
 int voikko_terminate(int handle) {
 	if (handle == 1 && voikko_handle_count > 0) {
 		voikko_handle_count--;
+		iconv_close(voikko_options.iconv_ext_ucs4);
+		iconv_close(voikko_options.iconv_ucs4_ext);
+		iconv_close(voikko_options.iconv_utf8_ucs4);
+		iconv_close(voikko_options.iconv_ucs4_utf8);
 		terminate_libmalaga();
+		/*int c = 0;
+		for (int i = 0; i < 1*1008; i++) if (voikko_options.cache_meta[i] == '.') c++;
+		printf("Cache slots used: %d\n", c);*/
+		if (voikko_options.cache) {
+			free(voikko_options.cache);
+			free(voikko_options.cache_meta);
+		}
 		return 1;
 	}
 	else return 0;
