@@ -1,3 +1,9 @@
+2006-05-20  Harri Pitkänen  <hatapitk@iki.fi>
+
+	* Case-sensitive checking
+	* Iconv handle caching
+	* Spellchecker result cache
+
 2006-04-24  Harri Pitkänen  <hatapitk@iki.fi>
 
 	* Implement VOIKKO_OPT_COMPOUND_INTERSECT_LEVEL
